# EvenementsRAG

./: .gitignore  README.md  ROADMAP.md  default.yaml  pyproject.toml  requirements.txt  user-config.yaml
.claude/: CLAUDE.md
config/: settings.py
config/benchmarks/: default.yaml  phase1_vanilla.yaml  phase2_hybrid.yaml  sweep_cs1024_co50.yaml  sweep_cs256_co50.yaml  sweep_cs512_co0.yaml  sweep_cs512_co128.yaml  sweep_cs512_co256.yaml  sweep_cs512_co50.yaml  user-config.yaml  wiki_dm_cosine.yaml  wiki_dm_dot_product.yaml  wiki_dm_euclidean.yaml  wiki_em_bge_base.yaml  wiki_em_bge_small.yaml  wiki_em_minilm_l12.yaml  wiki_em_minilm_l6.yaml  wiki_hybrid_w0.yaml  wiki_hybrid_w10.yaml  (+13 more)
docs/: branch_comparison.md  chunk_vs_article_evaluation.md  evaluation_metrics_explained.md  evaluation_plan.md  question_types_taxonomy.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
inspiration/: FEATURES.md  UI.md  benchmark.md  benchmark_viewer.md  metrics_visualisation.md  rag-optimizer.jsx  reranker_techniques_reference.md
progress_tracking/: E1-F1-T1_E1-F1-T2_implementation_plan.md
results/: CHANGELOG.md  DATASET_SIZE_COMPARISON.md  EVALUATION_SUMMARY.md  PHASE1_BASELINE_REPORT.md  QUICK_COMPARISON.md  phase1_baseline_976articles_49q.json
scripts/: auto_run_10k_pipeline.py  compare_dataset_sizes.py  convert_octank_pdf_to_json.py  convert_text_to_content.py  download_10000_articles.py  download_more_articles.py  download_wikipedia_data.py  establish_phase1_baseline.py  fetch_wikipedia_articles.py  generate_200_eval_questions.py  generate_50_questions.py  generate_analysis_report.py  generate_evaluation_questions.py  index_all_articles.py  index_and_generate_questions.py  index_and_generate_questions_10k.py  run_evaluation.py  run_phase1_10k.py  run_phase1_976articles.py  run_phase1_baseline.py  run_phase2_976articles.py  run_phase2_hybrid_temporal.py  scrape_10k_articles.py  setup_qdrant.sh  test_chunk_based_evaluation.py  test_evaluation.py  test_openrouter_models.py
tests/: conftest.py
(+132 files in other folders)
